hphp/hack/test/typecheck/dynamic_calls/override3.php.exp
File "override3.php", line 10, characters 19-21:
Member foo has the wrong type (Typing[4341])
File "override3.php", line 5, characters 19-21:
This method is __DynamicallyCallable
File "override3.php", line 10, characters 19-21:
This method is not
